tests/derive_compile_fail/unknown_container_attribute.rs
use snowflake_connector_rs::FromRow;

#[derive(FromRow)]
#[snowflake(unknown = "value")]
struct Bad {
    value: i64,
}

fn main() {}
